# trial2d

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.ci/: build_debug.sh  build_debug_android.sh  build_debug_emscripten.sh  build_debug_wasm.sh  build_debug_x64.bat  build_debug_x86.bat  build_release.sh  build_release_android.sh  build_release_emscripten.sh  build_release_wasm.sh  build_release_x64.bat  build_release_x86.bat  build_xcode_ios_device.sh  build_xcode_mac.sh  gen_msvc2017_windows.bat  gen_msvc2019_windows.bat  gen_xcode_ios_simulator.sh  prepare_android.sh  prepare_emscripten.sh
.ci/builds/: build_android.sh  build_android_debug.sh  build_android_release.sh  build_asmjs.sh  build_asmjs_debug.sh  build_darwin.sh  build_darwin_debug.sh  build_darwin_release.sh  build_emscripten_asmjs.sh  build_emscripten_debug.sh  build_emscripten_release.sh  build_emscripten_wasm.sh  build_ios_device.sh  build_ios_device_debug.sh  build_ios_simulator.sh  build_ios_simulator_debug.sh  build_linux.sh  build_linux_debug.sh  build_linux_release.sh  build_unix_debug.sh  build_unix_release.sh  build_wasm.sh  build_wasm_debug.sh  build_wasm_release.sh  build_windows_debug_x64.bat  build_windows_debug_x86.bat  build_windows_release_x64.bat  build_windows_release_x86.bat  build_windows_x64.bat  build_windows_x86.bat
.ci/platform/: prepare_android.sh  prepare_emscripten.sh
.ci/projects/: msvc2017_windows.bat  msvc2019_windows.bat  xcode_darwin.sh  xcode_ios_device.sh  xcode_ios_simulator.sh
addons/: CMakeLists.txt
addons/trial2d-application/: CMakeLists.txt
addons/trial2d-application/headers/trial2d/application/: application.hpp
addons/trial2d-application/sources/: application.cpp
addons/trial2d-application/sources/sokol/: sokol_base.hpp  sokol_main.cpp
addons/trial2d-audio/: CMakeLists.txt
addons/trial2d-audio/headers/trial2d/audio/: audio.hpp
addons/trial2d-audio/sources/: audio.cpp
addons/trial2d-core/: CMakeLists.txt
addons/trial2d-core/headers/trial2d/core/: core.hpp
addons/trial2d-debug/: CMakeLists.txt
addons/trial2d-debug/headers/trial2d/debug/: debug.hpp
addons/trial2d-debug/sources/: debug.cpp
addons/trial2d-input/: CMakeLists.txt
addons/trial2d-input/sources/: input.cpp
addons/trial2d-inspector/: CMakeLists.txt
addons/trial2d-inspector/headers/trial2d/inspector/: inspector.hpp
addons/trial2d-inspector/sources/: inspector.cpp
addons/trial2d-memory/: CMakeLists.txt
addons/trial2d-memory/headers/trial2d/memory/: memory.hpp
addons/trial2d-memory/sources/: memory.cpp
addons/trial2d-particles/: CMakeLists.txt
addons/trial2d-particles/headers/trial2d/particles/: particles.hpp
addons/trial2d-physics/: CMakeLists.txt
addons/trial2d-physics/headers/trial2d/physics/: physics.hpp
addons/trial2d-storage/: CMakeLists.txt
addons/trial2d-storage/headers/trial2d/storage/: storage.hpp
addons/trial2d-storage/sources/: storage.cpp
addons/trial2d-widgets/: CMakeLists.txt
addons/trial2d-widgets/headers/trial2d/widgets/: widgets.hpp
cmake/: t2d_add_executable.cmake  t2d_executable.cmake  t2d_platform.cmake  t2d_setup_executable.cmake
editor/: CMakeLists.txt
editor/headers/trial2d/editor/: editor.hpp
editor/sources/: editor.cpp
engine/: CMakeLists.txt
engine/application/: CMakeLists.txt
engine/application/sources/sokol/: sokol_base.hpp
engine/audio/: CMakeLists.txt
engine/audio/headers/trial2d/audio/: audio.hpp
engine/audio/sources/: audio.cpp
engine/audio/sources/miniaudio/: miniaudio_base.hpp
engine/audio/sources/miniaudio/impl/: miniaudio_impl.cpp  miniaudio_impl.mm
engine/core/: CMakeLists.txt
engine/core/headers/trial2d/core/: core.hpp
engine/core/sources/: core.cpp
engine/debug/: CMakeLists.txt
engine/debug/headers/trial2d/debug/: debug.hpp
engine/headers/trial2d/: trial2d.hpp
engine/image/: CMakeLists.txt
engine/image/headers/trial2d/image/: image.hpp
engine/image/sources/: image.cpp
engine/image/sources/stb/: stb_base.hpp
engine/image/sources/stb/impl/: stb_impl.cpp
engine/input/: CMakeLists.txt
engine/input/headers/trial2d/input/: input.hpp
engine/inspector/: CMakeLists.txt
engine/inspector/headers/trial2d/inspector/: inspector.hpp
engine/memory/: CMakeLists.txt
engine/memory/headers/trial2d/memory/: memory.hpp
engine/particles/: CMakeLists.txt
engine/particles/sources/: particles.cpp
engine/physics/: CMakeLists.txt
engine/physics/sources/: physics.cpp
engine/sources/: trial2d.cpp
engine/starter/: CMakeLists.txt
engine/starter/headers/trial2d/starter/: starter.hpp
engine/starter/sources/: starter.cpp
engine/starter/sources/sokol/impl/: sokol_impl.cpp  sokol_impl.mm
engine/storage/: CMakeLists.txt
engine/storage/headers/trial2d/storage/: storage.hpp
engine/storage/sources/: storage.cpp
engine/widgets/: CMakeLists.txt
engine/widgets/headers/trial2d/widgets/: widgets.hpp
engine/widgets/sources/: widgets.cpp
sample/: CMakeLists.txt
sample/common/: CMakeLists.txt
sample/common/headers/sample/common/: common.hpp
sample/common/sources/: common.cpp
sample/editor/: CMakeLists.txt
sample/editor/sources/: editor.cpp
sample/editor/support/: cocoa.plist  ios.plist  wasm.html
sample/gradle/: .gitignore  gradle.properties  local.properties  settings.gradle
sample/gradle/editor/: build.gradle
sample/gradle/editor/src/main/: AndroidManifest.xml
sample/gradle/editor/src/main/res/values/: strings.xml  themes.xml
sample/gradle/launch/: build.gradle
sample/gradle/launch/src/main/: AndroidManifest.xml
sample/gradle/launch/src/main/res/values/: strings.xml
sample/gradle/launch/src/main/res/values-night/: themes.xml
sample/launch/: CMakeLists.txt
sample/launch/sources/: launch.cpp
sample/launch/sources/services/: leaderboard.cpp  leaderboard.hpp
sample/launch/support/: cocoa.plist  ios.plist  wasm.html
utests/: CMakeLists.txt
utests/sources/: utests.cpp
utests/support/: cocoa.plist  ios.plist  wasm.html
