project(trial2d-addons)

option(T2D_ENABLE_APPLICATION_ADDON "Enable trial2d application addon" ON)
option(T2D_ENABLE_AUDIO_ADDON "Enable trial2d audio addon" ON)
option(T2D_ENABLE_CORE_ADDON "Enable trial2d core addon" ON)
option(T2D_ENABLE_DEBUG_ADDON "Enable trial2d debug addon" ON)
option(T2D_ENABLE_INPUT_ADDON "Enable trial2d input addon" ON)
option(T2D_ENABLE_INSPECTOR_ADDON "Enable trial2d inspector addon" ON)
option(T2D_ENABLE_MEMORY_ADDON "Enable trial2d memory addon" ON)
option(T2D_ENABLE_PARTICLES_ADDON "Enable trial2d particles addon" ON)
option(T2D_ENABLE_PHYSICS_ADDON "Enable trial2d physics addon" ON)
option(T2D_ENABLE_STORAGE_ADDON "Enable trial2d storage addon" ON)
option(T2D_ENABLE_WIDGETS_ADDON "Enable trial2d widgets addon" ON)

add_library(${PROJECT_NAME} INTERFACE)

if(T2D_ENABLE_APPLICATION_ADDON)
    add_subdirectory(trial2d-application)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-application)
endif()

if(T2D_ENABLE_AUDIO_ADDON)
    add_subdirectory(trial2d-audio)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-audio)
endif()

if(T2D_ENABLE_CORE_ADDON)
    add_subdirectory(trial2d-core)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-core)
endif()

if(T2D_ENABLE_DEBUG_ADDON)
    add_subdirectory(trial2d-debug)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-debug)
endif()

if(T2D_ENABLE_INPUT_ADDON)
    add_subdirectory(trial2d-input)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-input)
endif()

if(T2D_ENABLE_INSPECTOR_ADDON)
    add_subdirectory(trial2d-inspector)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-inspector)
endif()

if(T2D_ENABLE_MEMORY_ADDON)
    add_subdirectory(trial2d-memory)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-memory)
endif()

if(T2D_ENABLE_PARTICLES_ADDON)
    add_subdirectory(trial2d-particles)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-particles)
endif()

if(T2D_ENABLE_PHYSICS_ADDON)
    add_subdirectory(trial2d-physics)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-physics)
endif()

if(T2D_ENABLE_STORAGE_ADDON)
    add_subdirectory(trial2d-storage)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-storage)
endif()

if(T2D_ENABLE_WIDGETS_ADDON)
    add_subdirectory(trial2d-widgets)
    target_link_libraries(${PROJECT_NAME} INTERFACE trial2d-widgets)
endif()
